--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,7 @@
         <velocity.version>1.7</velocity.version>
         <jackson-dataformat-csv.version>2.7.0</jackson-dataformat-csv.version>
         <commons-io.version>2.4</commons-io.version>
+        <micro-simulator.version>1.1.7</micro-simulator.version>
 
         <!-- maven plugin build related  -->
         <maven-compiler-plugin.version>3.2</maven-compiler-plugin.version>
@@ -181,7 +182,7 @@
         <dependency>
             <groupId>org.jsmart</groupId>
             <artifactId>micro-simulator</artifactId>
-            <version>1.1.4</version>
+            <version>${micro-simulator.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
