ISSUE-43 # Red Spike, Interactive report - Filter by group or author - And Dashboard etc fancy stuff

--- a/src/test/resources/soap_host.properties
+++ b/src/test/resources/soap_host.properties
@@ -4,3 +4,6 @@ restful.application.endpoint.port=80
 
 # Google Map Service Context
 restful.application.endpoint.context=
+
+# This is false by default, it runs even if this property is not present here
+report.spike.chart.enabled=true
