ISS-58 # WireMock port bind exception was Throwable

--- a/src/test/resources/web_app.properties
+++ b/src/test/resources/web_app.properties
@@ -1,9 +1,10 @@
 # Web Server host and port
 restful.application.endpoint.host=http://localhost
-restful.application.endpoint.port=8888
+restful.application.endpoint.port=8889
 
 # Web Service context; Leave it blank in case you do not have a common context
 restful.application.endpoint.context=
 
 # WireMock will use this port for mocking dependent end points
-mock.api.port=8888
+mock.api.port=8889
+#mock.api.port=8888 #Jupyter was running at 8888 during TensorFlow Python run.
