ISS-51 # Comment updated to Tensor Flow Jupyter port clash

--- a/src/test/resources/web_app.properties
+++ b/src/test/resources/web_app.properties
@@ -7,4 +7,4 @@ restful.application.endpoint.context=
 
 # WireMock will use this port for mocking dependent end points
 mock.api.port=8889
-#mock.api.port=8888 #Jupyter was running at 8888 during TensorFlow Python run.
+#mock.api.port=8888 # Tensor Flow - Jupyter runs at 8888 during Python linear regression.
