ISS-53 # Load - properties provider

--- a/src/test/resources/load_config_test.properties
+++ b/src/test/resources/load_config_test.properties
@@ -9,7 +9,7 @@ number.of.threads=3
 # Also by setting its value to 0 all the threads can be created at once at the same time.
 # Note- If you want to ramp up and fire more threads/user-requests in less time e.g. 5 threads in 2secs(or 1 sec),
 # then, use '@UseHttpClient(SslTrustHttpClient.class)' as this closes the connection before making next connection.
-ramp.up.period=3
+ramp.up.period.in.seconds=3
 
 # Keep it equal or lesser than "number.of.threads" size
 #During the ramp up period, say 10 sec, how many requests you want to fire.
