ISS-88 # Review comment added

--- a/src/test/resources/load_config_test.properties
+++ b/src/test/resources/load_config_test.properties
@@ -2,6 +2,8 @@
 # to simulate a load test with 5 concurrent users then you need to enter 5 as the value for this property. A high end
 # machine will be able to spawn more number of threads. To keep the consistent(or nearly consistent) gap between the
 # threads, adjust this number with 'ramp.up.period.in.seconds' and the actual response time of the API end point.
+# For "@RunWith(ZeroCodeMultiLoadRunner.class)", set this to at least equal to number of "@TestMapping" or more,
+# otherwise there wont be enough threads to run each test.
 number.of.threads=3
 
 # It indicates the time taken to create all of the threads needed to fork the requests. If you set 10 seconds as the
