ISS-94 # Enable disable html interactive report

--- a/src/test/resources/soap_host.properties
+++ b/src/test/resources/soap_host.properties
@@ -7,3 +7,7 @@ restful.application.endpoint.context=
 
 # This is false by default, it runs even if this property is not present here
 report.spike.chart.enabled=true
+
+# This is false by default, it runs even if this property is not present here
+# If you do not want the html-searchable-report, then set this flag to true
+interactive.html.report.disabled=true
