ISSUE-101 # Comment added in POM for community artefact

--- a/pom.xml
+++ b/pom.xml
@@ -202,7 +202,7 @@
         <dependency>
             <groupId>com.aventstack</groupId>
             <artifactId>extentreports</artifactId>
-            <version>${extentreports.version}</version>
+            <version>${extentreports.version}</version> <!-- extent community version -->
         </dependency>
     </dependencies>
 
