--- a/pom.xml
+++ b/pom.xml
@@ -51,17 +51,9 @@
     </distributionManagement>
 
     <properties>
-        <!-- Build will skip the javadoc generation -->
-        <!--<maven.javadoc.skip>true</maven.javadoc.skip>-->
-        <!-- disable annoying HTML checks -->
-        <!--<additionalparam>-Xdoclint:none</additionalparam>-->
-
-        <!-- Build will not fail if error occurs during javadoc generation -->
-        <maven.javadoc.failOnError>false</maven.javadoc.failOnError>
-
         <!-- this project properties -->
         <junit.version>4.12</junit.version>
-        <jackson-databind.version>2.8.2</jackson-databind.version>
+        <jackson-databind.version>2.9.5</jackson-databind.version>
         <guava.version>16.0</guava.version>
         <jsonassert.version>1.2.3</jsonassert.version>
         <classpath-explorer.version>1.0</classpath-explorer.version>
@@ -79,15 +71,27 @@
         <httpclient.version>4.5</httpclient.version>
         <h2.db.version>1.4.191</h2.db.version>
         <extentreports.version>3.1.3</extentreports.version>
-
-        <!-- maven plugin build related  -->
+        <version.kafka-clients>2.0.0</version.kafka-clients>
+        <!-- maven plugin, build properties  -->
         <maven-compiler-plugin.version>3.2</maven-compiler-plugin.version>
         <java-compiler-source.version>1.8</java-compiler-source.version>
         <java-compiler-target.version>1.8</java-compiler-target.version>
         <maven-assembly-plugin.version>2.5.4</maven-assembly-plugin.version>
+        <!-- Release Build will not fail if error occurs during javadoc generation -->
+        <maven.javadoc.failOnError>false</maven.javadoc.failOnError>
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.6.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.kafka</groupId>
+            <artifactId>kafka-clients</artifactId>
+            <version>${version.kafka-clients}</version>
+        </dependency>
         <dependency>
             <groupId>org.json</groupId>
             <artifactId>json</artifactId>
