ISS-104 - BasicKafkaClient plugged in

--- a/src/test/resources/hosts_servers/kafka_test_server.properties
+++ b/src/test/resources/hosts_servers/kafka_test_server.properties
@@ -4,6 +4,9 @@
 # =-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
 kafka.bootstrap.servers=192.168.99.1:9092
 
+kafka.producer.properties=hosts_servers/kafka_producer.properties
+kafka.consumer.properties=hosts_servers/kafka_consumer.properties
+
 # -------------------------------------------
 # Optional local consumer properties.
 # These can be overwritten by the tests
