ISS-104 - Consumer Sync,Async vanilla case -Pass

--- a/src/test/resources/hosts_servers/kafka_test_server.properties
+++ b/src/test/resources/hosts_servers/kafka_test_server.properties
@@ -11,7 +11,7 @@ kafka.consumer.properties=hosts_servers/kafka_consumer.properties
 # Optional local consumer properties.
 # These can be overwritten by the tests
 # -------------------------------------------
-consumer.commitAsync = true
+#consumer.commitAsync = true
 consumer.fileDumpTo= target/temp/demo.txt
 consumer.fileDumpType= RAW
 consumer.showRecordsAsResponse=false
