--- a/src/test/resources/hosts_servers/kafka_test_server.properties
+++ b/src/test/resources/hosts_servers/kafka_test_server.properties
@@ -7,10 +7,10 @@ kafka.bootstrap.servers=192.168.99.1:9092
 kafka.producer.properties=hosts_servers/kafka_producer.properties
 kafka.consumer.properties=hosts_servers/kafka_consumer.properties
 
-# -------------------------------------------
-# Optional local consumer properties.
-# These can be overwritten by the tests
-# -------------------------------------------
+# ------------------------------------------------------------
+# Optional local consumer properties common to all test cases.
+# These can be overwritten by the tests locally.
+# ------------------------------------------------------------
 #consumer.commitAsync = true
 consumer.fileDumpTo= target/temp/demo.txt
 consumer.fileDumpType= RAW
