ISS-104 # Effective properties derived

--- a/src/test/resources/hosts_servers/kafka_test_server.properties
+++ b/src/test/resources/hosts_servers/kafka_test_server.properties
@@ -11,12 +11,12 @@ kafka.consumer.properties=hosts_servers/kafka_consumer.properties
 # Optional local consumer properties common/central to all test cases.
 # These can be overwritten by the tests locally.
 # --------------------------------------------------------------------
-#consumer.commitSync = true
-consumer.commitAsync = true
+consumer.commitSync = true
+#consumer.commitAsync = true
 consumer.fileDumpTo= target/temp/demo.txt
 consumer.fileDumpType= RAW
 consumer.showRecordsAsResponse=false
-consumer.MAX_NO_OF_RETRY_POLLS_OR_TIME_OUTS= 5
+consumer.maxNoOfRetryPoolsOrTimeouts = 5
 
 # local producer properties
 producer.key1=value1-test
