ISS-104 # polling retries timeouts - done

--- a/src/test/resources/hosts_servers/kafka_test_server.properties
+++ b/src/test/resources/hosts_servers/kafka_test_server.properties
@@ -11,12 +11,27 @@ kafka.consumer.properties=hosts_servers/kafka_consumer.properties
 # Optional local consumer properties common/central to all test cases.
 # These can be overwritten by the tests locally.
 # --------------------------------------------------------------------
+# If this property is set, then the consumer does a commitSync after reading the message(s)
+# Make sure you don't set both commitSync and commitAsync to true
 consumer.commitSync = true
-#consumer.commitAsync = true
+# If this property is set, then the consumer does a commitAsync after reading the message(s)
+# Make sure you don't set both commitSync and commitAsync to true
+consumer.commitAsync = false
+# All records those were read are dumped to this specified file path
+# This path can be a relative path or an absolute path. If the file
+# does not exist, it creates the file and dumps the records
 consumer.fileDumpTo= target/temp/demo.txt
+# While dumping the file, it has to be dumped in this format
 consumer.fileDumpType= RAW
-consumer.showRecordsAsResponse=false
-consumer.maxNoOfRetryPoolsOrTimeouts = 5
+# If this property is set to true, all records are shown in the response.
+# When dealing with large number of records, you might not be interested
+# in the individual records, but interested in the recordCount
+# i.e. total number of records consumed
+consumer.showRecordsInResponse=false
+# That means if any record(s) are read, then this counter is reset to 0(zero) and the consumer
+# polls again. So if no records are fetched for a specific poll interval, then the consumer
+# gives a retry retrying until this max number polls/reties reached.
+consumer.maxNoOfRetryPollsOrTimeouts = 3
 
 # local producer properties
-producer.key1=value1-test
+producer.key1=value1-testv ycvb
