ISS-104 # pollingTime in milliSec -configured

--- a/src/test/resources/hosts_servers/kafka_test_server.properties
+++ b/src/test/resources/hosts_servers/kafka_test_server.properties
@@ -32,6 +32,9 @@ consumer.showRecordsInResponse=false
 # polls again. So if no records are fetched for a specific poll interval, then the consumer
 # gives a retry retrying until this max number polls/reties reached.
 consumer.maxNoOfRetryPollsOrTimeouts = 3
+# Polling time in milli seconds i.e how long the consumer should poll before
+# the next retry poll
+consumer.pollingTime = 100
 
 # local producer properties
 producer.key1=value1-testv ycvb
