ISS-104 # Kafka client version 2.1.0 - [Santhosh] Minor changes done for new docker-compose run

--- a/src/test/resources/hosts_servers/kafka_test_server.properties
+++ b/src/test/resources/hosts_servers/kafka_test_server.properties
@@ -2,7 +2,7 @@
 # kafka bootstrap servers comma separated
 # e.g. localhost:9092,host2:9093
 # =-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
-kafka.bootstrap.servers=172.16.123.1:9092 
+kafka.bootstrap.servers=localhost:9092
 
 kafka.producer.properties=hosts_servers/kafka_producer.properties
 kafka.consumer.properties=hosts_servers/kafka_consumer.properties
@@ -31,10 +31,10 @@ consumer.showRecordsInResponse=false
 # That means if any record(s) are read, then this counter is reset to 0(zero) and the consumer
 # polls again. So if no records are fetched for a specific poll interval, then the consumer
 # gives a retry retrying until this max number polls/reties reached.
-consumer.maxNoOfRetryPollsOrTimeouts = 3
+consumer.maxNoOfRetryPollsOrTimeouts = 5
 # Polling time in milli seconds i.e how long the consumer should poll before
 # the next retry poll
-consumer.pollingTime = 100
+consumer.pollingTime = 1000
 
 # local producer properties
 producer.key1=value1-testv ycvb
