Script made more readable

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,28 @@
+os: linux
+dist: xenial
+
+#specific JDK or multiple JDK can be specified here. There is an issue with mvn surefire and openJDK8. 
+#It is better to switch to openJDK
 language: java
 
+
+#This helps to avoid downloading artefacts every time from MVN central. 
+#If you find any CI build failing due to unreflected dependency changes, kindly clear the CI cache
+cache:
+  directories:
+  - $HOME/.m2
+
+#Mandatory for using docker and docker-compose
 services:
   - docker
 
+#Kafka is not available as a service, So we are doing it our own way.
+#Still docker images are pulled every time. We need to cahche it for best practice.
 before_install:
   - wget https://raw.githubusercontent.com/authorjapps/zerocode-docker-factory/master/compose/kafka-single-node.yml
   - docker-compose -f kafka-single-node.yml up -d
-  
-install:
-  - mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
 
+#Just compile and run tests, also print version at the beginning.
+#No need for package or install, as there is no use in creating a jar and putting them into local cache. 
 script:
-  - mvn test -B
+  - mvn test -V
