Fall back to Travis defaults for Maven project

--- a/.travis.yml
+++ b/.travis.yml
@@ -24,5 +24,4 @@ before_install:
 
 #Just compile and run tests, also print version at the beginning.
 #No need for package or install, as there is no use in creating a jar and putting them into local cache. 
-script:
-  - mvn test -V
+#making use of the default install and script tag provided by the Travis
