ISS-176 # Produce with Key, Value - tested for String, Double SerDeser

--- a/src/test/resources/hosts_servers/kafka_consumer_int_key.properties
+++ b/src/test/resources/hosts_servers/kafka_consumer_int_key.properties
@@ -2,7 +2,7 @@
 #          kafka consumer properties
 # =-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
 group.id=consumerGroup14
-key.deserializer=org.apache.kafka.common.serialization.StringDeserializer
+key.deserializer=org.apache.kafka.common.serialization.DoubleDeserializer
 value.deserializer=org.apache.kafka.common.serialization.StringDeserializer
 max.poll.records=2
 enable.auto.commit=false
