--- a/src/test/resources/kafka_servers/kafka_producer.properties
+++ b/src/test/resources/kafka_servers/kafka_producer.properties
@@ -5,6 +5,9 @@ client.id=zerocode-producer
 key.serializer=org.apache.kafka.common.serialization.StringSerializer
 value.serializer=org.apache.kafka.common.serialization.StringSerializer
 
+# -------------------------------------------------------------
+# Check in the : ProducerConfig.java file for all list of keys
+# -------------------------------------------------------------
 #acks=all
 #retries=0
 #batch.size=16384
