ISS-181 # Assert int key and string key

--- a/src/test/resources/kafka_servers/kafka_test_server_int_key.properties
+++ b/src/test/resources/kafka_servers/kafka_test_server_int_key.properties
@@ -17,6 +17,10 @@ consumer.commitSync = true
 # If this property is set, then the consumer does a commitAsync after reading the message(s)
 # Make sure you don't set both commitSync and commitAsync to true
 consumer.commitAsync = false
+
+# If this property is set to RAW, then the consumer reads the records as RAW,
+# if this is set to JSON, then the consumer reads the records as JSON.
+consumer.recordType = RAW
 # All records those were read are dumped to this specified file path
 # This path can be a relative path or an absolute path. If the file
 # does not exist, it creates the file and dumps the records
@@ -27,7 +31,7 @@ consumer.fileDumpType= RAW
 # When dealing with large number of records, you might not be interested
 # in the individual records, but interested in the recordCount
 # i.e. total number of records consumed
-consumer.showConsumedRecords=false
+consumer.showConsumedRecords=true
 # That means if any record(s) are read, then this counter is reset to 0(zero) and the consumer
 # polls again. So if no records are fetched for a specific poll interval, then the consumer
 # gives a retry retrying until this max number polls/reties reached.
