ISS-182 # Produce RAW n JSON -Green

--- a/src/test/resources/kafka_servers/kafka_producer_double_key.properties
+++ b/src/test/resources/kafka_servers/kafka_producer_double_key.properties
@@ -2,7 +2,7 @@
 #          kafka producer properties
 # =-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
 client.id=zerocode-producer
-key.serializer=org.apache.kafka.common.serialization.IntegerSerializer
+key.serializer=org.apache.kafka.common.serialization.DoubleSerializer
 value.serializer=org.apache.kafka.common.serialization.StringSerializer
 
 #acks=all
