ISS-182 # Produce RAW avro via rest proxy -Green

--- a/src/test/resources/kafka_servers/kafka_test_server_avro.properties
+++ b/src/test/resources/kafka_servers/kafka_test_server_avro.properties
@@ -4,8 +4,13 @@
 # =-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
 kafka.bootstrap.servers=localhost:9092
 
-kafka.producer.properties=kafka_servers/kafka_producer.properties
+kafka.producer.properties=kafka_servers/kafka_producer_avro.properties
 kafka.consumer.properties=kafka_servers/kafka_consumer_avro.properties
+
+# Kafka REST Proxy end point for sending avro messages
+web.application.endpoint.host=http://localhost
+web.application.endpoint.port=8082
+web.application.endpoint.context=
 
 # --------------------------------------------------------------------
 # Optional local consumer properties common/central to all test cases.
