ISS-187 # KSQL Server FQDN -Green

--- a/src/test/resources/kafka_servers/kafka_test_server_avro.properties
+++ b/src/test/resources/kafka_servers/kafka_test_server_avro.properties
@@ -12,6 +12,9 @@ web.application.endpoint.host=http://localhost
 web.application.endpoint.port=8082
 web.application.endpoint.context=
 
+# URL of Kafka KSQL server
+kafka-ksql-server-fqdn=http://localhost:8088
+
 # --------------------------------------------------------------------
 # Optional local consumer properties common/central to all test cases.
 # These can be overwritten by the tests locally.
