--- a/core/pom.xml
+++ b/core/pom.xml
@@ -50,36 +50,9 @@
     </distributionManagement>
 
     <properties>
-        <!-- this project properties -->
         <!-- This project properties -->
         <junit.version>4.12</junit.version>
-        <jackson-databind.version>2.9.7</jackson-databind.version>
-        <guava.version>23.0</guava.version>
-        <jsonassert.version>1.2.3</jsonassert.version>
-        <classpath-explorer.version>1.0</classpath-explorer.version>
-        <jukito.version>1.4.1</jukito.version>
-        <guice.version>4.0</guice.version>
-        <commons-lang.version>2.6</commons-lang.version>
-        <jayway-version>2.2.0</jayway-version>
-        <resteasy-jaxrs.version>2.2.1.GA</resteasy-jaxrs.version>
-        <logback.version>1.0.7</logback.version>
-        <wiremock.version>2.19.0</wiremock.version>
-        <velocity.version>1.7</velocity.version>
-        <jackson-dataformat-csv.version>2.7.0</jackson-dataformat-csv.version>
-        <commons-io.version>2.4</commons-io.version>
-        <micro-simulator.version>1.1.10</micro-simulator.version>
-        <httpclient.version>4.5</httpclient.version>
-        <h2.db.version>1.4.191</h2.db.version>
-        <extentreports.version>3.1.3</extentreports.version>
-        <version.kafka-clients>2.1.0</version.kafka-clients>
-        <version.kafka-avro-serializer>5.1.0</version.kafka-avro-serializer>
-        <!-- maven plugin, build properties  -->
-        <maven-compiler-plugin.version>3.2</maven-compiler-plugin.version>
-        <java-compiler-source.version>1.8</java-compiler-source.version>
-        <java-compiler-target.version>1.8</java-compiler-target.version>
-        <maven-assembly-plugin.version>2.5.4</maven-assembly-plugin.version>
-        <!-- Release Build will not fail if error occurs during javadoc generation -->
-        <maven.javadoc.failOnError>false</maven.javadoc.failOnError>
+        <version.gson>2.6.2</version.gson>
     </properties>
 
     <repositories>
@@ -93,124 +66,95 @@
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
-            <version>2.6.2</version>
         </dependency>
         <dependency>
             <groupId>org.apache.kafka</groupId>
             <artifactId>kafka-clients</artifactId>
-            <version>${version.kafka-clients}</version>
-            <!--<exclusions>
-                <exclusion>
-                    <groupId>org.slf4j</groupId>
-                    <artifactId>slf4j-api</artifactId>
-                </exclusion>
-            </exclusions>-->
         </dependency>
         <dependency>
             <groupId>io.confluent</groupId>
             <artifactId>kafka-avro-serializer</artifactId>
-            <version>${version.kafka-avro-serializer}</version>
         </dependency>
         <dependency>
             <groupId>org.json</groupId>
             <artifactId>json</artifactId>
-            <version>20160810</version>
         </dependency>
         <dependency>
             <groupId>org.apache.velocity</groupId>
             <artifactId>velocity</artifactId>
-            <version>${velocity.version}</version>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.dataformat</groupId>
             <artifactId>jackson-dataformat-csv</artifactId>
-            <version>${jackson-dataformat-csv.version}</version>
         </dependency>
         <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
-            <version>${commons-io.version}</version>
         </dependency>
         <dependency>
             <groupId>com.github.tomakehurst</groupId>
             <artifactId>wiremock</artifactId>
-            <version>${wiremock.version}</version>
         </dependency>
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
-            <version>${logback.version}</version>
         </dependency>
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-core</artifactId>
-            <version>${logback.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.jboss.resteasy</groupId>
             <artifactId>resteasy-jaxrs</artifactId>
-            <version>${resteasy-jaxrs.version}</version>
         </dependency>
         <dependency>
             <groupId>com.jayway.jsonpath</groupId>
             <artifactId>json-path</artifactId>
-            <version>${jayway-version}</version>
         </dependency>
         <dependency>
             <groupId>commons-lang</groupId>
             <artifactId>commons-lang</artifactId>
-            <version>${commons-lang.version}</version>
         </dependency>
         <dependency>
             <groupId>com.google.classpath-explorer</groupId>
             <artifactId>classpath-explorer</artifactId>
-            <version>${classpath-explorer.version}</version>
         </dependency>
         <dependency>
             <groupId>org.jukito</groupId>
             <artifactId>jukito</artifactId>
-            <version>${jukito.version}</version>
         </dependency>
         <dependency>
             <groupId>com.google.inject</groupId>
             <artifactId>guice</artifactId>
-            <version>${guice.version}</version>
         </dependency>
         <dependency>
             <groupId>org.skyscreamer</groupId>
             <artifactId>jsonassert</artifactId>
-            <version>${jsonassert.version}</version>
         </dependency>
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
-            <version>${guava.version}</version>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-annotations</artifactId>
-            <version>${jackson-databind.version}</version>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-core</artifactId>
-            <version>${jackson-databind.version}</version>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
-            <version>${jackson-databind.version}</version>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.datatype</groupId>
             <artifactId>jackson-datatype-jdk8</artifactId>
-            <version>${jackson-databind.version}</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>${junit.version}</version>
             <!--<scope>test</scope>--> <!-- added with compile scope. Do not change this -->
         </dependency>
         <dependency>
@@ -221,19 +165,16 @@
         <dependency>
             <groupId>org.jsmart</groupId>
             <artifactId>micro-simulator</artifactId>
-            <version>${micro-simulator.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
-            <version>${h2.db.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>com.aventstack</groupId>
             <artifactId>extentreports</artifactId>
-            <version>${extentreports.version}</version> <!-- extent community version -->
         </dependency>
     </dependencies>
 
