--- a/kafka-testing/pom.xml
+++ b/kafka-testing/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<artifactId>zerocode-tdd-parent</artifactId>
 		<groupId>org.jsmart</groupId>
-		<version>1.3.2</version>
+		<version>1.3.3-SNAPSHOT</version>
 	</parent>
 
 	<groupId>org.jsmart</groupId>
