--- a/junit5-testing/pom.xml
+++ b/junit5-testing/pom.xml
@@ -8,7 +8,7 @@
     </parent>
 
     <groupId>org.jsmart</groupId>
-    <artifactId>junit5-testing</artifactId>
+    <artifactId>zerocode-tdd-jupiter</artifactId>
     <version>1.3.6-SNAPSHOT</version>
 
     <packaging>jar</packaging>
