ISS-207 # Parameterized step - simple value, csv values

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -64,6 +64,10 @@
 
     <dependencies>
         <dependency>
+            <groupId>com.univocity</groupId>
+            <artifactId>univocity-parsers</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
         </dependency>
