ISS-277 # YAML Scenario DSL - Unit and Integration - Basic flow tested - Optional DOuble Quoted String tested - Json Path for Req and resp tested

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -64,6 +64,10 @@
 
     <dependencies>
         <dependency>
+            <groupId>com.fasterxml.jackson.dataformat</groupId>
+            <artifactId>jackson-dataformat-yaml</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.univocity</groupId>
             <artifactId>univocity-parsers</artifactId>
         </dependency>
