--- a/http-testing/pom.xml
+++ b/http-testing/pom.xml
@@ -57,8 +57,11 @@
                 <version>2.19.1</version>
                 <configuration>
                     <includes>
-                        <!-- <include>org.jsmart.zerocode.testhelp.tests.HelloWorldGitHubSuite</include> -->
                         <include>org.jsmart.zerocode.zerocodejavaexec.pojo.OrderTest</include>
+                        <include>org.jsmart.zerocode.testhelp.tests.HelloWorldCherryPickSuite</include>
+                        <include>org.jsmart.zerocode.testhelp.tests.helloworldjavaexec.HelloWorldJavaApiAsProtocolTest</include>
+                        <include>org.jsmart.zerocode.testhelp.tests.helloworldarrayelementmatching.HelloWorldArrayElementPickerTest</include>
+                        <include>org.jsmart.zerocode.testhelp.tests.helloworldimplicitdelay.JustHelloImplicitDelayTimeOutTest</include>
                     </includes>
                 </configuration>
             </plugin>
