ISS-277 # [Review Comments] Http method(operation) Integration Test

--- a/core/src/test/resources/integration_test_files/yaml/simple_get_api_test.yml
+++ b/core/src/test/resources/integration_test_files/yaml/simple_get_api_test.yml
@@ -3,7 +3,7 @@ scenarioName: As simple GET request response
 steps:
 - name: find_match
   url: "/api/v1/search/persons"
-  operation: GET
+  method: GET
   request:
     queryParams:
       lang: Amazing
