ISS-277 # [More Comments] verify instead of verifications

--- a/core/src/test/resources/integration_test_files/yaml/simple_get_api_multi_step_test.yml
+++ b/core/src/test/resources/integration_test_files/yaml/simple_get_api_multi_step_test.yml
@@ -23,7 +23,7 @@ steps:
     queryParams:
       lang: Amazing
       city: Lon
-  verifications:
+  verify:
     status: "$EQ.${$.find_match.response.status}"
     body:
       exactMatches: true
