--- a/core/src/test/resources/integration_test_files/yaml/simple_get_api_test.yml
+++ b/core/src/test/resources/integration_test_files/yaml/simple_get_api_test.yml
@@ -8,7 +8,7 @@ steps:
     queryParams:
       lang: Amazing
       city: Lon
-  verifications:
+  verify:
     status: 200
     body:
       exactMatches: true
