ISS-0 # report generated

--- a/pom.xml
+++ b/pom.xml
@@ -263,7 +263,7 @@
     </dependencyManagement>
 
     <!-- Uncomment this for uber jar -->
-    <!--<build>
+    <build>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -282,5 +282,4 @@
             </plugin>
         </plugins>
     </build>
-    -->
 </project>
