ISS-0 # Moved test files to core, added help text to ReportImpl

--- a/pom.xml
+++ b/pom.xml
@@ -269,7 +269,7 @@
     </dependencyManagement>
 
     <!-- Uncomment this for uber jar -->
-    <build>
+    <!--<build>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -287,5 +287,5 @@
                 </executions>
             </plugin>
         </plugins>
-    </build>
+    </build>-->
 </project>
