ISS-00 # Archetype should be published -Fixed

--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,7 @@
         <module>http-testing</module>
         <module>kafka-testing</module>
         <module>junit5-testing</module>
+        <module>zerocode-maven-archetype</module>
     </modules>
 
     <developers>
