--- a/zerocode-maven-archetype/pom.xml
+++ b/zerocode-maven-archetype/pom.xml
@@ -1,7 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>zerocode.archetype</groupId>
-    <artifactId>zerocodeArchetype</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <parent>
+        <groupId>org.jsmart</groupId>
+        <artifactId>zerocode-tdd-parent</artifactId>
+        <version>1.3.20-SNAPSHOT</version>
+    </parent>
+    <artifactId>zerocode-maven-archetype</artifactId>
+<!--
+    <packaging>maven-archetype</packaging>
+-->
+    <name>Zerocode Automated Testing Maven Archetype</name>
+    <description>Zerocode Automated-Testing Simple Maven Archetype</description>
+
+
 </project>
